# simple_gpu_info

./: Cargo.toml  LICENSE  README.md
config/systemd/user/: simple_gpu_info.service  simple_gpu_info.timer
src/: main.rs
