[package]
name = "simple_gpu_info"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }
notify-rust = "4.8.0"
nvml-wrapper = "0.7.0"
sysinfo = "0.19.0"
