[package]
name = "simple_gpu_info"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.6", features = ["derive"] }
notify-rust = "4.9.0"
nvml-wrapper = { version = "0.9.0", features = ["legacy-functions"] }
sysinfo = "0.29.10"
